# smalldbg

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
docs/: ProcessThreadAbstraction.md  RegisterUnwinding.md
examples/: CMakeLists.txt  WEBSIDE_EXAMPLE.md  debugger_api.cpp  locals_example.cpp  process_api.cpp  stacktrace_example.cpp  symbols_example.cpp  test_attach.cpp  ttd_replay.cpp
include/smalldbg/: Arch.h  Debugger.h  NativeFrameProcessor.h  Process.h  StackFrameProcessor.h  StackTrace.h  SymbolBackend.h  SymbolProvider.h  Thread.h  Types.h  Unwinder.h
include/smalldbg/arch/: ARM64Registers.h  X64Registers.h  X86Registers.h
include/smalldbg/bindings/: CAPI.h
src/: Arch.cpp  Debugger.cpp  LocalVariable.cpp  NativeFrameProcessor.cpp  Process.cpp  StackFrame.cpp  StackTrace.cpp  SymbolProvider.cpp  Thread.cpp  main_example.cpp
src/backends/: Backend.h  DbgEngBackend.cpp  DbgEngBackend.h  PtraceBackend.cpp  PtraceBackend.h  PtracePlatform.h  PtracePlatformLinux.cpp  PtracePlatformLinux.h  PtracePlatformMac.cpp  PtracePlatformMac.h  WindowsBackend.cpp  WindowsBackend.h
src/bindings/: CAPI.cpp
src/platform/: Platform.h  SourceResolver.h
src/platform/posix/: Platform.cpp
src/platform/posix/linux/: PtracePlatformLinux.cpp  PtracePlatformLinux.h  SourceResolverLinux.cpp
src/platform/posix/macos/: PtracePlatformMac.cpp  PtracePlatformMac.h  SourceResolverMac.cpp
src/platform/windows/: HttpDownload.cpp  HttpDownload.h  Platform.cpp
src/symbols/: DbgEngSymbolBackend.cpp  DbgEngSymbolBackend.h  DbgHelpBackend.cpp  DbgHelpBackend.h  DwarfBackend.cpp  DwarfBackend.h  DwarfTypes.cpp  DwarfTypes.h  ElfParser.cpp  MachOParser.cpp  ObjectFileParser.h  SymbolsInternal.h
tests/: CMakeLists.txt  test_attach.cpp  test_harness.cpp  test_stub.cpp  test_target.cpp
tests/dbgeng_regs/: CMakeLists.txt  test_dbgeng_regs.cpp  test_dbgeng_target_x64.cpp  test_dbgeng_target_x86.cpp  test_regs_x64.asm  test_regs_x86.asm
webside/: CMakeLists.txt  DESIGN.md  README.md
webside/src/: HttpServer.cpp  HttpServer.h  Json.cpp  Json.h  WebsideServer.cpp  WebsideServer.h
webside/src/Egg/: CMakeLists.txt  EggDebugSession.cpp  EggDebugSession.h  EggHeapObject.cpp  EggHeapObject.h  EggInspector.cpp  EggInspector.h  EggKnownObjects.cpp  EggKnownObjects.h  EggObject.cpp  EggObject.h  EggWebsideServer.cpp  EggWebsideServer.h  egg_crash_test.cpp  main.cpp
